add_library(
    oneflow_user_kernel_util
    slice_util.cpp
)

add_library(
    oneflow_user_kernels
    acc_kernel.cpp
    add_n_kernel.cpp
    amp_white_identity_kernel.cpp
    argmax_kernel.cpp
    arg_sort_kernel.cpp
    arg_where_kernel.cpp
    arg_where_kernel_util.cpp
    assign_if_kernel.cpp
    assign_kernel.cpp
    batch_gather_kernel.cpp
    bernoulli_kernel.cpp
    bias_add_kernel.cpp
    broadcast_div_grad_kernel.cpp
    broadcast_like_kernel.cpp
    cast_kernel.cpp
    cast_to_static_shape_kernel.cpp
    categorical_ordinal_encode_kernel.cpp
    categorical_ordinal_encode_kernel_util.cpp
    clip_by_value_kernel.cpp
    coco_reader_kernel.cpp
    combined_margin_loss_kernel.cpp
    concat_kernel.cpp
    constant_kernel.cpp
    conv_cudnn_kernels.cpp
    conv_kernels.cpp
    copy_kernel.cpp
    count_not_finite_kernel.cpp
    ctc_loss_kernel.cpp
    ctc_loss_kernel_util.cpp
    deconv_cudnn_kernel.cpp
    diag_kernel.cpp
    dim_gather_kernels.cpp
    dim_gather_kernel_util.cpp
    dropout_kernel.cpp
    dynamic_loss_scale_schedule_kernel.cpp
    elementwise_maximum_minimum_kernel.cpp
    elu_kernel.cpp
    empty_kernel.cpp
    expand_dims_kernel.cpp
    expand_kernel.cpp
    fake_quantization_kernel.cpp
    flatten_kernel.cpp
    fused_cast_scale_kernel.cpp
    gather_kernel.cpp
    gelu_kernel.cpp
    generate_random_batch_permutation_indices_kernel.cpp
    gpt_data_loader_kernel.cpp
    hardsigmoid_kernel.cpp
    hardswish_kernel.cpp
    hardtanh_kernel.cpp
    identity_kernel.cpp
    image_batch_align_kernel.cpp
    image_decode_kernel.cpp
    image_object_preprocess_kernels.cpp
    image_preprocess_kernels.cpp
    image_resize_kernels.cpp
    image_target_resize_kernel.cpp
    indexed_slices_reduce_sum_kernel.cpp
    indexed_slices_reduce_sum_kernel_util.cpp
    in_top_k_kernel.cpp
    in_top_k_kernel_util.cpp
    l1_l2_regularize_gradient_kernel.cpp
    l1_l2_regularize_gradient_kernel_util.cpp
    l2_normalize_kernel.cpp
    layer_norm_cpu_kernel.cpp
    leaky_relu_kernel.cpp
    math_binary_broadcast_kernels.cpp
    math_binary_elementwise_kernel.cpp
    math_unary_elementwise_kernel.cpp
    matmul_kernels.cpp
    min_max_observer_kernel.cpp
    model_update_kernels.cpp
    model_update_kernel_util.cpp
    moving_average_min_max_observer_kernel.cpp
    multiply_kernel.cpp
    nccl_logical_2d_sbp_kernels.cpp
    nccl_logical_kernels.cpp
    nd_index_slice_kernels.cpp
    nop_kernel.cpp
    ofrecord_decoder_kernels.cpp
    ofrecord_image_classification_reader_kernel.cpp
    ofrecord_reader_kernel.cpp
    one_hot_kernel.cpp
    onerec_decoder_kernels.cpp
    onerec_reader_kernel.cpp
    ones_like_kernel.cpp
    pack_kernel.cpp
    pad2d_kernels.cpp
    pad2d_kernels_util.cpp
    pad_kernel.cpp
    pool_cpu_kernel.cpp
    pool_gpu_kernel.cpp
    prelu_kernel.cpp
    random_crop_kernel_state.cpp
    random_mask_generator.cpp
    random_seed_util.cpp
    range_kernel.cpp
    range_kernel_util.cpp
    reduce_kernel.cpp
    reduce_like_kernels.cpp
    relu_kernel.cpp
    repeat_kernel.cpp
    reshape_kernel.cpp
    reshape_like_kernel.cpp
    same_padding_kernel.cpp
    scalar_add_kernel.cpp
    scalar_by_tensor_kernel.cpp
    scalar_mul_kernel.cpp
    scalar_pow_kernel.cpp
    sigmoid_cross_entropy_kernel.cpp
    sigmoid_kernel.cpp
    slice_kernel.cpp
    smooth_l1_loss_kernel.cpp
    softmax_cross_entropy_kernel.cpp
    softmax_kernel.cpp
    softmax_kernel_util.cpp
    sort_kernel.cpp
    sparse_cross_entropy_kernel.cpp
    sparse_cross_entropy_kernel_util.cpp
    sparse_softmax_cross_entropy_kernel.cpp
    split_like_kernel.cpp
    square_sum_kernel.cpp
    squeeze_kernel.cpp
    ssp_variable_proxy_kernel.cpp
    tensor_buffer_kernels.cpp
    test_kernels.cpp
    top_k_kernel.cpp
    transpose_kernel.cpp
    tril_kernel.cpp
    tuple_identity_kernel.cpp
    two_stage_reduce_kernel.cpp
    two_stage_reduce_kernel_util.cpp
    unique_kernel_util.cpp
    unique_with_counts_kernel.cpp
    unpack_kernel.cpp
    unsorted_batch_segment_sum_kernel.cpp
    unsorted_segment_sum_kernel.cpp
    unsorted_segment_sum_kernel_util.cpp
    where_kernel.cpp
    where_kernel_util.cpp
    zero_like_kernel.cpp
)

target_link_libraries(
    oneflow_user_kernels
    oneflow_user_kernel_util
    oneflow_user_data
    oneflow_user_utils
)

if (BUILD_CUDA)
    cuda_add_library(
        oneflow_user_cuda_kernels
        add_n_kernel.cu
        argmax_kernel.cu
        arg_sort_kernel.cu
        arg_where_kernel_util.cu
        assign_if_kernel.cu
        bias_add_kernel.cu
        categorical_ordinal_encode_kernel_util.cu
        clip_by_value_kernel.cu
        combined_margin_loss_kernel.cu
        conv_cudnn_kernels.cpp
        count_not_finite_kernel.cu
        ctc_loss_kernel_util.cu
        deconv_cudnn_kernel.cpp
        diag_kernel.cu
        dim_gather_kernel_util.cu
        dropout_kernel.cu
        dynamic_loss_scale_schedule_kernel.cu
        eager_nccl_kernels.cu
        elementwise_maximum_minimum_kernel.cu
        elu_kernel.cu
        expand_kernel.cu
        fake_quantization_kernel.cu
        fused_bias_add_kernel.cu
        fused_cast_scale_kernel.cu
        fused_self_attention_query_mul_key_and_value_kernel.cu
        fused_tril_scale_softmax_mask_scale_kernel.cu
        gelu_kernel.cu
        generate_random_batch_permutation_indices_kernel.cu
        hardsigmoid_kernel.cu
        hardswish_kernel.cu
        hardtanh_kernel.cu
        heap_selection_top_k_kernel.cu
        image_preprocess_kernels.cu
        in_top_k_kernel_util.cu
        l1_l2_regularize_gradient_kernel_util.cu
        l2_normalize_kernel.cu
        layer_norm_gpu_kernel.cu
        leaky_relu_kernel.cu
        math_binary_elementwise_kernel.cu
        math_unary_elementwise_kernel.cu
        min_max_observer_kernel.cu
        model_update_kernel_util.cu
        moving_average_min_max_observer_kernel.cu
        nd_index_slice_kernels.cu
        normalization_kernel.cu
        nvtx_range_kernel.cu
        one_hot_kernel.cu
        pad2d_kernels_util.cu
        partial_fc_sample_kernel.cu
        prelu_kernel.cu
        radix_sort.cuh
        radix_sort_top_k_kernel.cu
        random_mask_generator.cu
        range_kernel_util.cu
        scalar_pow_kernel.cu
        sigmoid_cross_entropy_kernel.cu
        slice_util.cu
        smooth_l1_loss_kernel.cu
        softmax_cross_entropy_kernel.cu
        softmax_kernel_util.cu
        sort_kernel.cu
        sparse_cross_entropy_kernel_util.cu
        sparse_softmax_cross_entropy_kernel.cu
        tril_kernel.cu
        two_stage_reduce_kernel_util.cu
        unique_kernel_util.cu
        unsorted_segment_sum_kernel_util.cu
        upsample_kernel.cu
        where_kernel_util.cu
    )
    cuda_add_library(
        oneflow_softmax_cuda_kernel
        softmax_kernel.cu
    )
    target_link_libraries(oneflow_user_cuda_kernels ${CUDA_LIBRARIES} oneflow_user_kernel_util)
    target_link_libraries(oneflow_softmax_cuda_kernel ${CUDA_LIBRARIES})
    list(APPEND ONEFLOW_USER_LIBS oneflow_user_cuda_kernels)
    list(APPEND ONEFLOW_USER_LIBS oneflow_softmax_cuda_kernel)
endif()

# TODO: move this to a proper dir
add_library(
    stateful_local_opkernel
    stateful_local_opkernel.cpp
)
